syntax = "proto3";

package kira.micro.service.upload;

option go_package = "../pb";

message File {
    string fileID = 1;
    string fileName = 2;
    int64 fileSize = 3;
    string fileExt = 4;
    string fileHash = 5;
    string fileURL = 6;
    string delURL = 7;
}

message UploadFileReq {
    string fileName = 1;
    string fileExt = 2;
    int64 fileSize = 3;
    
    bytes fileBody = 4;
    string owner = 5;
}

message UploadFileRes {
    bool succ = 1;
    string msg = 2;
    File file = 3;
}

service UploadService {
    rpc UploadFile(UploadFileReq) returns(UploadFileRes);
}